--- a/app/templates/app/profile.html
+++ b/app/templates/app/profile.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
 	<script src="/static/jquery/dist/jquery.js"></script>
 	<script type="text/javascript" src="/static/bootstrap/dist/js/bootstrap.min.js"></script>
