--- a/app/templates/app/profile.html
+++ b/app/templates/app/profile.html
@@ -9,22 +9,39 @@
 <body>
 	<h1 class="text-center">GitHub User Data</h1>
 	<div class="col-lg-12">
-		<div class="table-responsive">
-			<table class="table table-bordered table-hover table-striped tablesorter">
-				<thead>
-					<tr>
-						<th class="header">Username<i class="icon-sort"></i></th>
-						<th class="header">Blog<i class="icon-sort"></i></th>
-						<th class="header">Public Repos<i class="icon-sort"></i></th>
-						<th class="header">Public Gists<i class="icon-sort"></i></th>
-						<th class="header">Email<i class="icon-sort"></i></th>
-						<th class="header">Followers<i class="icon-sort"></i></th>
-						th class="header">Following<i class="icon-sort"></i></th>
-					</tr>
-				</thead>
+		<style>
+			.form-signin {
+				max-width: 550px;
+				padding: 15px;
+				margin: 0 auto;
+			}    
+		</style>
 
-				<tbody>
-					{% for key in data %}
+		<div class="container text-center">
+			<form class="form-signin" id="login_form" method="post" action="/app/profile/">
+				{% csrf_token %}
+
+				<br>
+				<input type="text" name="user" class="form-control" placeholder="Github User Name, e.g: derekmpham" value="" required autofocus>
+				<br>
+				<button class="btn btn-lg btn-primary btn-block" type="submit">Get Data</button>
+			</form>
+			<div class="table-responsive">
+				<table class="table table-bordered table-hover table-striped tablesorter">
+					<thead>
+						<tr>
+							<th class="header">Username<i class="icon-sort"></i></th>
+							<th class="header">Blog<i class="icon-sort"></i></th>
+							<th class="header">Public Repos<i class="icon-sort"></i></th>
+							<th class="header">Public Gists<i class="icon-sort"></i></th>
+							<th class="header">Email<i class="icon-sort"></i></th>
+							<th class="header">Followers<i class="icon-sort"></i></th>
+							th class="header">Following<i class="icon-sort"></i></th>
+						</tr>
+					</thead>
+
+					<tbody>
+						{% for key in data %}
 						<tr>
 							<td>{{ key.name }}</td>
 							<td>{{ key.blog }}</td>
@@ -34,11 +51,11 @@
 							<td>{{ key.followers }}</td>
 							<td>{{ key.following }}</td>
 						</tr>
-					{% endfor %}
-				</tbody>
+						{% endfor %}
+					</tbody>
 
-			</table>
+				</table>
+			</div>
 		</div>
-	</div>
-</body>
-</html>
+	</body>
+	</html>
