--- a/app/templates/app/profile.html
+++ b/app/templates/app/profile.html
@@ -36,7 +36,7 @@
 							<th class="header">Public Gists<i class="icon-sort"></i></th>
 							<th class="header">Email<i class="icon-sort"></i></th>
 							<th class="header">Followers<i class="icon-sort"></i></th>
-							th class="header">Following<i class="icon-sort"></i></th>
+							<th class="header">Following<i class="icon-sort"></i></th>
 						</tr>
 					</thead>
 
