--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
+	<script src="/static/jquery/dist/jquery.js"></script>
+	<script type="text/javascript" src="/static/bootstrap/dist/js/bootstrap.min.js"></script>
+	<link rel="stylesheet" href="/static/bootstrap/dist/css/bootstrap.min.css">
+	<link rel="stylesheet" href="/static/bootstrap/dist/css/bootstrap-theme.min.css">
 	<title>Home Page</title>
 </head>
 <body>
