Move button thorizontally to middle of page

--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -9,6 +9,8 @@
 </head>
 <body>
 	<h1>Index Page</h1>
+	<div style="text-align:center;">
 	<a class="btn btn-lg btn-primary" href="/app/profile/">Enter</a>
+	</div>
 </body>
 </html>
