Place button/link in  bottom center of page

--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -9,8 +9,6 @@
 </head>
 <body>
 	<h1>Index Page</h1>
-	<div style="text-align:center;">
-	<a class="btn btn-lg btn-primary" href="/app/profile/">Enter</a>
-	</div>
+	<a class="btn btn-lg btn-primary" href="/app/profile/" style="position:fixed;bottom:45px;left:50%;transform:translate(-50%, -50%);">Enter</a>
 </body>
 </html>
