--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -8,7 +8,7 @@
 	<title>Home Page</title>
 </head>
 <body>
-	<h1>Index Page</h1>
+	<h1 style="position:absolute;left:20px">Index Page</h1>
 	<a class="btn btn-lg btn-primary" href="/app/profile/" style="position:fixed;bottom:45px;left:50%;transform:translate(-50%, -50%);">Enter</a>
 </body>
 </html>
