Include three js in index file

--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -5,6 +5,7 @@
 	<script type="text/javascript" src="/static/bootstrap/dist/js/bootstrap.min.js"></script>
 	<link rel="stylesheet" href="/static/bootstrap/dist/css/bootstrap.min.css">
 	<link rel="stylesheet" href="/static/bootstrap/dist/css/bootstrap-theme.min.css">
+	<script src="/static/js/three.js"></script>
 	<title>Home Page</title>
 </head>
 <body>
