--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" href="/static/bootstrap/dist/css/bootstrap.min.css">
 	<link rel="stylesheet" href="/static/bootstrap/dist/css/bootstrap-theme.min.css">
 	<script src="/static/js/three.js"></script>
+	<script src="/static/js/TrackballControls.js"></script>
 	<title>Home Page</title>
 </head>
 <body>
