--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -7,7 +7,8 @@
 	<link rel="stylesheet" href="/static/bootstrap/dist/css/bootstrap-theme.min.css">
 	<script src="/static/js/three.js"></script>
 	<script src="/static/js/TrackballControls.js"></script>
-	<script src="js/OBJLoader.js"></script>
+	<script src="/static/js/OBJLoader.js"></script>
+	<script src="/static/js/Detector.js"></script>
 	<title>Home Page</title>
 </head>
 <body>
