Add general style to index page

--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -5,14 +5,23 @@
 	<script type="text/javascript" src="/static/bootstrap/dist/js/bootstrap.min.js"></script>
 	<link rel="stylesheet" href="/static/bootstrap/dist/css/bootstrap.min.css">
 	<link rel="stylesheet" href="/static/bootstrap/dist/css/bootstrap-theme.min.css">
+	<title>Git Stalking</title>
+	<style>
+		html, body {
+			background-color: #000;
+			margin: 0px;
+			padding: 0px;
+			overflow: hidden;
+		}
+	</style>
+</head>
+<body>
+	<div></div>
 	<script src="/static/js/three.js"></script>
 	<script src="/static/js/TrackballControls.js"></script>
 	<script src="/static/js/OBJLoader.js"></script>
 	<script src="/static/js/Detector.js"></script>
-	<title>Home Page</title>
-</head>
-<body>
-	<h1 style="position:absolute;left:20px">Index Page</h1>
+	<h1 style="position:absolute;left:20px">Git Stalking</h1>
 	<a class="btn btn-lg btn-primary" href="/app/profile/" style="position:fixed;bottom:45px;left:50%;transform:translate(-50%, -50%);">Enter</a>
 </body>
 </html>
