Add captions to index  page

--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -141,6 +141,9 @@
 		}
 
 	</script>
+	<h4 style="position:absolute;top:30%;right:45px;">*Can you move the octocat?</h4>
+	<h4 style="position:absolute;bottom:45%;left:45px;">(Hint: try dragging it)</h4>
+	<h4 style="position:absolute;bottom:25%;right:45px;">Don't forget to click enter ;)</h4>
 	<a class="btn btn-lg btn-primary" href="/app/profile/" style="position:fixed;bottom:45px;left:50%;transform:translate(-50%, -50%);">Enter</a>
 </body>
 </html>
