--- a/app/templates/app/search.html
+++ b/app/templates/app/search.html
@@ -18,7 +18,7 @@
 		</style>
 
 		<div class="container text-center">
-			<form class="form-signin" id="login_form" method="post" action="/app/profile/">
+			<form class="form-signin" id="login_form" method="post" action="/app/search/">
 				{% csrf_token %}
 
 				<br>
